# NcursesRestraunt

./: CMakeLists.txt  Makefile  README.md  asdf  documentation_for_reservation.Doxyfile  resFunctions.c  resFunctions.h  reservation  reservation.c
gtest/src/gtest-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
gtest/src/gtest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gtest/src/gtest-build/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gtest/src/gtest-stamp/: download-gtest.cmake  extract-gtest.cmake
include/: resFunctions.h
tests/: reservation_test.cxx
